updaed coverage into CI

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,9 @@ add_test(NAME assrtr_test COMMAND assertr_test)
 add_executable(assertl_test asrtl_test.c)
 target_link_libraries(assertl_test PUBLIC unity asrtl)
 add_test(NAME assrtl_test COMMAND assertl_test)
+
+add_test(
+  NAME coverage
+  COMMAND gcovr --cobertura-pretty --cobertura cobertura.xml -r
+          ${CMAKE_SOURCE_DIR}/
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
