--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -30,6 +30,19 @@ jobs:
     - name: Test
       run: ctest --preset ${{ matrix.preset }}
 
+  coverage:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: cmake --workflow --preset coverage
+
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: _build/cobertura.xml
+
   clang-tidy:
     runs-on: ubuntu-latest
 
