--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,8 +8,10 @@ add_executable(assertl_test asrtl_test.c)
 target_link_libraries(assertl_test PUBLIC unity asrtl)
 add_test(NAME assrtl_test COMMAND assertl_test)
 
-add_test(
-  NAME coverage
-  COMMAND gcovr --cobertura-pretty --cobertura cobertura.xml -r
-          ${CMAKE_SOURCE_DIR}/
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+if(ASSERT_ENABLE_COVERAGE)
+  add_test(
+    NAME coverage
+    COMMAND gcovr --cobertura-pretty --cobertura cobertura.xml -r
+            ${CMAKE_SOURCE_DIR}/
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+endif()
