--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -38,9 +38,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
-      - name: install gcovr 5.0
+      - name: install gcovr
         run: |
-          pip install gcovr==5.0 # 5.1 is not supported
+          pip install gcovr
       - uses: actions/checkout@v4
 
       - run: cmake --workflow --preset coverage
