--- a/asrtr/CMakeLists.txt
+++ b/asrtr/CMakeLists.txt
@@ -4,5 +4,5 @@ project(asrtr VERSION 0.0)
 
 set(CMAKE_C_STANDARD 99)
 
-add_library(asrtr reactor.c)
+add_library(asrtr asrtr.c)
 target_link_libraries(asrtr PUBLIC asrtl)
