Started development of C++ libs nad main client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ add_subdirectory(asrtl)
 add_subdirectory(asrtc)
 add_subdirectory(asrtr)
 
+add_subdirectory(asrtcpp)
+add_subdirectory(asrtio)
+
 include(CTest)
 
 enable_testing()
