--- a/asrtcpp/CMakeLists.txt
+++ b/asrtcpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(asrtl VERSION 0.0)
+project(asrtcpp VERSION 0.0)
 
 add_library(asrtcpp controller.cpp)
 target_compile_features(asrtcpp PUBLIC cxx_std_20)
