more iterations, more tests, cobs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(asrtl)
 add_subdirectory(asrtc)
 add_subdirectory(asrtr)
 
+add_subdirectory(asrtlpp)
 add_subdirectory(asrtcpp)
 add_subdirectory(asrtrpp)
 add_subdirectory(asrtio)
