--- a/asrtcpp/CMakeLists.txt
+++ b/asrtcpp/CMakeLists.txt
@@ -4,4 +4,4 @@ project(asrtcpp VERSION 0.0)
 
 add_library(asrtcpp controller.cpp)
 target_compile_features(asrtcpp PUBLIC cxx_std_20)
-target_link_libraries(asrtcpp PUBLIC asrtc)
+target_link_libraries(asrtcpp PUBLIC asrtc asrtlpp)
