--- a/asrtio/CMakeLists.txt
+++ b/asrtio/CMakeLists.txt
@@ -15,10 +15,9 @@ cpmaddpackage(
   "BOOST_ENABLE_CMAKE ON"
   "BOOST_SKIP_INSTALL_RULES ON"
   "BUILD_SHARED_LIBS OFF"
-  "BOOST_INCLUDE_LIBRARIES container\\\;asio\\\;process" # Note the escapes!
+  "BOOST_INCLUDE_LIBRARIES container\\\;asio" # Note the escapes!
 )
 
 add_executable(asrtio main.cpp)
 target_compile_features(asrtio PUBLIC cxx_std_20)
-target_link_libraries(asrtio PUBLIC asrtcpp CLI11::CLI11 Boost::asio
-                                    Boost::process)
+target_link_libraries(asrtio PUBLIC asrtcpp CLI11::CLI11 Boost::asio)
