--- a/asrtrpp/CMakeLists.txt
+++ b/asrtrpp/CMakeLists.txt
@@ -4,4 +4,4 @@ project(asrtrpp VERSION 0.0)
 
 add_library(asrtrpp reactor.cpp)
 target_compile_features(asrtrpp PUBLIC cxx_std_20)
-target_link_libraries(asrtrpp PUBLIC asrtr)
+target_link_libraries(asrtrpp PUBLIC asrtr asrtlpp)
